--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+input:-webkit-autofill {
+    box-shadow: 0 0 0 1000px white inset !important;
+    -webkit-text-fill-color: black !important;
+  }
